# navpy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
examples/: companies_house.py  generic_form.py  reed_jobs.py  rightmove.py
navpy/: __init__.py  actions.py  agent.py  budget.py  cli.py  dom.py  llm.py  logging_utils.py
tests/: test_actions.py  test_agent.py  test_budget.py  test_dom.py
