[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navpy"
version = "0.1.0"
description = "LLM-guided browser automation: point it at a URL, describe the task in plain English, get structured JSON."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "binniepiss" }]
keywords = ["llm", "agents", "browser-automation", "playwright", "web-scraping", "pydantic", "litellm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "playwright>=1.40",
    "litellm>=1.40",
    "pydantic>=2.5",
    "httpx>=0.24",
    "rich>=13.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
navpy = "navpy.cli:main"

[project.urls]
Homepage = "https://github.com/binniepiss/navpy"
Repository = "https://github.com/binniepiss/navpy"
Issues = "https://github.com/binniepiss/navpy/issues"

[tool.hatch.build.targets.wheel]
packages = ["navpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
